--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -21,3 +21,12 @@
     float: left;
     text-align: left;
 }
+
+.col-6 h3, .col-3 h3 { 
+    font-weight: 500;
+}
+
+.col-3 a:hover {
+    text-decoration: underline;
+    color: #303030;
+}
