--- a/mobile.css
+++ b/mobile.css
@@ -8,6 +8,7 @@
 
 body {
    scroll-behavior: smooth;
+   overflow-x: hidden;
 }
 
 /* Utility Classes */
@@ -80,11 +81,12 @@ h6 {
 /* Work Experience */
 
 .swiper-container-mobile {
-   width: 300px;
+   max-width: 300px;
    height: 125px;
    margin-left: auto;
    margin-right: auto;
 }
+
 
 .experience-arrow {
    margin: 0;
