--- a/style.css
+++ b/style.css
@@ -290,6 +290,7 @@ header {
 .nav-links span:hover {
    background-color: var(--surface-color);
    color: var(--primary-color);
+   transition: all 0.3s ease;
 }
 
 /* About Suraj */
@@ -303,7 +304,7 @@ header {
 .about-image img {
    margin-top: 75px;
    border-radius: 50%;
-   margin-left: 30px;
+   margin-left: 20px;
    border: 3px solid var(--background-color);
    box-shadow: 5px 5px 10px var(--background-color);
 }
@@ -392,7 +393,7 @@ header {
 
 .cta {
    padding-top: 20px;
-   width: 60%;
+   width: 50%;
    color: #ffffff;
 }
 
@@ -562,7 +563,7 @@ header {
 
 .company:hover {
    color: var(--primary-color);
-   font-weight: 700;
+   opacity: 0.6;
    transition: all 0.5s ease;
 }
 
