--- a/mobile.css
+++ b/mobile.css
@@ -24,14 +24,32 @@ body {
 
 /* Landing Page */
 
+.sticky-image-wrapper {
+   position: fixed;
+   bottom: 0;
+   width: 100%;
+}
+
+.mobile-landing-pic {
+   display: table;
+   position: relative;
+   margin: auto;
+   right: 22px;
+}
+
 header {
    width: 100%;
-   background: url("./assets/images/mobile-background.png") no-repeat center center/cover;
+   background-color: var(--surface-color);
+   background: none;
 }
 
 .welcome-text {
    padding: 0px 20px;
-   height: 320px;
+   height: 100vh;
+}
+
+.descriptor {
+   padding-top: 5px
 }
 
 h1 {
@@ -47,27 +65,31 @@ h6 {
    font-size: 16px;
 }
 
+.socials {
+   margin-top: 15px;
+}
+
 .socials li{
-   margin-right: 20px;
+   margin-right: 25px;
    display: inline-block;
 }
 
 .socials li i {
-   font-size: 18px;
+   font-size: 20px;
 }
 
 .nav-links {
-   display: block;
-   margin-top: 15px;
    font-size: 12px;
+   justify-content: center;
+   margin-top: 30px;
 }
 
 .nav-links li a {
-   margin-top: 20px;
+   margin-right: 15px;
 }
 
 .nav-links span {
-   padding: 3px 5px;
+   padding: 5px 10px;
    border-radius: 50px;
 }
 
@@ -86,9 +108,20 @@ h6 {
 
 .swiper-container-mobile {
    width: 300px !important;
-   height: 125px;
+   height: 105px;
    margin-left: auto;
    margin-right: auto;
+}
+
+.swiper-slide h5 {
+   font-size: 18px;
+   padding-bottom: 10px;
+   font-weight: 700;
+}
+
+.swiper-slide h6 {
+   font-size: 12px;
+   color: var(--primary-color);
 }
 
 .container-2 {
