--- a/style.css
+++ b/style.css
@@ -185,6 +185,82 @@ hr {
 
 .fade { opacity: 1; }
 
+/* Preloader */
+
+.preloader {
+   position: fixed;
+   left: 0;
+   right: 0;
+   top: 0;
+   bottom: 0;
+   height: 100%;
+   width: 100%;
+   background-color: var(--background-color);
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   z-index: 999999;
+   -webkit-transition: all 0.3s ease-in-out 0s;
+   -moz-transition: all 0.3s ease-in-out 0s;
+   -ms-transition: all 0.3s ease-in-out 0s;
+   -o-transition: all 0.3s ease-in-out 0s;
+   transition: all 0.3s ease-in-out 0s;
+}
+
+.preloader.loaded {
+   opacity: 0;
+   visibility: hidden;
+}
+
+.sr-only { 
+   position:absolute;
+   width:1px;
+   height:1px;
+   padding:0;
+   overflow:hidden;
+   clip:rect(0,0,0,0);
+   white-space:nowrap;
+   border:0
+}
+
+.sr-only-focusable:active,.sr-only-focusable:focus {
+   position:static;
+   width:auto;
+   height:auto;
+   overflow:visible;
+   clip:auto;
+   white-space:normal
+}
+
+@-webkit-keyframes spinner-grow {
+   0%{-webkit-transform:scale(0);
+      transform:scale(0)}
+   50%{opacity:1}
+}
+
+@keyframes spinner-grow {
+   0%{-webkit-transform:scale(0);
+      transform:scale(0)}
+   50%{opacity:1}
+}
+
+.spinner-grow {
+   display:inline-block;
+   width:2rem;
+   height:2rem;
+   vertical-align:text-bottom;
+   background-color:var(--primary-color);
+   border-radius:50%;
+   opacity:0;
+   -webkit-animation:spinner-grow .75s linear infinite;
+   animation:spinner-grow .75s linear infinite
+}
+
+.spinner-grow-sm {
+   width:1rem;
+   height:1rem
+}
+
 /* Navbar */
 
 nav {
@@ -334,13 +410,13 @@ header {
    max-height: 100px;
    grid-template-columns: 3fr 1fr;
    align-items: center;
-   border: 2px solid var(--surface-color);
+   border: 3px solid var(--surface-color);
 }
 
 .swiper-slide:hover {
    background-color: #242424;
-   border: 2px solid var(--primary-variant);
-   transition: all 0.3s ease-in-out !important;
+   border: 3px solid var(--primary-variant);
+   transition:   0.3s ease-in-out !important;
 }
 
 .experience-title {
