--- a/mobile.css
+++ b/mobile.css
@@ -104,6 +104,20 @@ h6 {
    margin-left: 0px;
 }
 
+
+.content {
+   top: 52%;
+   left: 50%;
+   height: 100px;
+   font-size: 20px;
+   width: 100%;
+   text-align: center;
+}
+
+.content__container__list {
+   text-align: center;
+}
+
 /* Work Experience */
 
 .swiper-container-mobile {
@@ -112,6 +126,15 @@ h6 {
    margin-left: auto;
    margin-right: auto;
 }
+
+.content__container:before {
+   content: none;
+}
+
+.content__container:after {
+   content: none;
+}
+
 
 .swiper-slide h5 {
    font-size: 18px;
