--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ a {
 
 h2, h3, h4 {font-weight: 700;}
 
-h1 { font-size: 100px; }
+h1 { font-size: 110px; }
 
 h2 { font-size: 36px; }
 
@@ -135,6 +135,34 @@ hr {
    padding-bottom: 1px; 
    transition: all 0.3s ease-in-out; 
    cursor: pointer;
+   color: var(--primary-color);
+}
+
+.title-underline1 {
+   border-bottom: 1px solid #121212;
+   padding-bottom: 5px;
+   color: #ffffff;
+}
+
+.title-underline1:hover { 
+   padding-bottom: 1px; 
+   transition: all 0.3s ease-in-out; 
+   cursor: pointer;
+   border-bottom: 1px solid var(--primary-color);
+   color: var(--primary-color);
+}
+
+.title-underline2 {
+   border-bottom: 1px solid #1d1d1d;
+   padding-bottom: 5px;
+   color: #ffffff;
+}
+
+.title-underline2:hover { 
+   padding-bottom: 1px; 
+   transition: all 0.3s ease-in-out; 
+   cursor: pointer;
+   border-bottom: 1px solid var(--primary-color);
    color: var(--primary-color);
 }
 
@@ -271,23 +299,6 @@ nav {
    font-size: 14px;
 }
 
-#navbar {
-   position: fixed;
-   top:-550px;
-   width: 100%;
-   transition: top 0.3s;
-   background-color: #242424;
-   z-index: 999;
-}
-
-.logo {
-   margin-right: auto !important;
-   color: #ffffff;
-   opacity: 0.87;
-   font-size: 18px;
-   font-weight: 700;
-}
-
 .navbar_links li {
    display: inline-block;
 }
@@ -303,6 +314,23 @@ nav {
 .navbar_links li a:hover {
    color: var(--primary-color);
    transition: all 0.3s ease-in-out;
+}
+
+#navbar {
+   position: fixed;
+   top:-550px;
+   width: 100%;
+   transition: top 0.3s;
+   background-color: #242424;
+   z-index: 999;
+}
+
+.logo {
+   margin-right: auto !important;
+   color: #ffffff;
+   opacity: 0.87;
+   font-size: 18px;
+   font-weight: 700;
 }
 
 /* Header Section */
@@ -325,7 +353,138 @@ header {
    padding-top: 5px;
 }
 
-.socials {
+.fixed {
+   width: 100%;
+   padding-bottom: 35px;
+}
+ 
+.content {
+   position: absolute;
+   top: 65%;
+   left: 22%;
+   transform: translate(-50%, -50%);
+   height: 160px;
+   overflow: hidden;
+   font-size: 35px;
+   line-height: 40px;
+   color: var(--primary-color);
+}
+
+.content__container {
+   overflow: hidden;
+   font-weight: 550;
+   height: 40px;
+   padding: 0 40px;
+}
+
+.content__container:before {
+   content: "<";
+   left: 0;
+}
+
+.content__container:after {
+   content: "/>";
+   position: absolute;
+   right: 0;
+}
+
+.content__container:after, .content__container:before {
+   position: absolute;
+   top: 3%;
+   color: white);
+   font-size: 35px;
+   line-height: 40px;
+   -webkit-animation-name: opacity;
+   -webkit-animation-duration: 2s;
+   -webkit-animation-iteration-count: infinite;
+   animation-name: opacity;
+   animation-duration: 2s;
+   animation-iteration-count: infinite;
+}
+
+.content__container__text {
+   display: inline;
+   margin: 0;
+}
+
+.content__container__list {
+   margin-top: 0;
+   text-align: left;
+   list-style: none;
+   -webkit-animation-name: change;
+   -webkit-animation-duration: 10s;
+   -webkit-animation-iteration-count: infinite;
+   animation-name: change;
+   animation-duration: 10s;
+   animation-iteration-count: infinite;
+}
+
+.content__container__list__item {
+   line-height: 40px;
+   margin: 0;
+}
+
+@-webkit-keyframes opacity {
+   0%, 100% {
+     opacity: 0;
+   }
+   50% {
+     opacity: 1;
+   }
+}
+
+@-webkit-keyframes change {
+   0%, 12.66%, 100% {
+     transform: translate3d(0, 0, 0);
+   }
+   16.66%, 29.32% {
+     transform: translate3d(0, -25%, 0);
+   }
+   33.32%, 45.98% {
+     transform: translate3d(0, -50%, 0);
+   }
+   49.98%, 62.64% {
+     transform: translate3d(0, -75%, 0);
+   }
+   66.64%, 79.3% {
+     transform: translate3d(0, -50%, 0);
+   }
+   83.3%, 95.96% {
+     transform: translate3d(0, -25%, 0);
+   }
+}
+
+@keyframes opacity {
+   0%, 100% {
+     opacity: 0;
+   }
+   50% {
+     opacity: 1;
+   }
+}
+
+@keyframes change {
+   0%, 12.66%, 100% {
+     transform: translate3d(0, 0, 0);
+   }
+   16.66%, 29.32% {
+     transform: translate3d(0, -25%, 0);
+   }
+   33.32%, 45.98% {
+     transform: translate3d(0, -50%, 0);
+   }
+   49.98%, 62.64% {
+     transform: translate3d(0, -75%, 0);
+   }
+   66.64%, 79.3% {
+     transform: translate3d(0, -50%, 0);
+   }
+   83.3%, 95.96% {
+     transform: translate3d(0, -25%, 0);
+   }
+}
+
+/* .socials {
    margin-top: 10px;
 }
 
@@ -344,9 +503,35 @@ header {
    opacity: 0.87;
    transition: all 0.3s ease-in-out;
    transform: scale(1.05);
-}
+} */
 
 .nav-links {
+   display: flex;
+   flex-direction: row;
+   text-transform: uppercase;
+   margin-top: 30px;
+}
+
+.nav-links li a {
+   margin-right: 35px;
+   opacity: 0.6;
+   font-weight: 700;
+   color: #ffffff;
+   border-bottom: 5px solid #1d1d1d;
+   padding-bottom: 3px;
+}
+
+.nav-links li a:hover {
+   padding-bottom: 1px; 
+   transition: all 0.3s ease-in-out; 
+   cursor: pointer;
+   opacity: 1;
+   color: white;
+   border-bottom: 2px solid var(--primary-color);
+   transition: all 0.3s ease-in-out;
+}
+
+/* .nav-links {
    display: flex;
    flex-direction: row;
    text-transform: uppercase;
@@ -375,7 +560,7 @@ header {
    background-color: var(--surface-color);
    color: var(--primary-color);
    transition: all 0.3s ease-in-out;
-}
+} */
 
 /* About Suraj */
 
@@ -442,6 +627,7 @@ header {
 
 .swiper-buttons {
    opacity: 0.38;
+   padding-top: 20px;
 }
 
 .swiper-button-next {
