--- a/mobile.css
+++ b/mobile.css
@@ -18,51 +18,6 @@ body {
 
 /* Utility Classes */
 
-.section {
-   padding: 75px 0; 
-}
-
-/* Landing Page */
-
-.sticky-image-wrapper {
-   position: fixed;
-   bottom: 0;
-   width: 100%;
-}
-
-.mobile-landing-pic {
-   display: table;
-   position: relative;
-   margin: auto;
-   right: 22px;
-}
-
-header {
-   width: 100%;
-   background-color: var(--surface-color);
-   background: none;
-}
-
-.welcome-text {
-   padding: 0px 20px;
-   top: 40%;
-}
-.content {
-   top: 48%;
-   left: 50%;
-   font-size: 20px;
-   width: 100%;
-   text-align: center;
-}
-
-.content__container__list {
-   text-align: center;
-}
-
-.descriptor {
-   padding-top: 5px
-}
-
 h1 {
    font-size: 35px;
    padding-bottom: 10px;
@@ -76,8 +31,34 @@ h6 {
    font-size: 16px;
 }
 
+.section {
+   padding: 75px 0; 
+}
+
+/* Landing Page */
+
+header {
+   width: 100%;
+   background-color: var(--surface-color);
+   background: none;
+}
+
+.welcome-text {
+   padding: 0px 20px;
+   height: 100vh;
+}
+
+.mobile-header-image  {
+   padding-bottom: 20px;
+}
+
+/* 
+.descriptor {
+   padding-top: 5px
+} */
+
 .socials {
-   top: 60%;
+   margin-top: 15px;
 }
 
 .socials li{
@@ -92,6 +73,7 @@ h6 {
 .nav-links {
    font-size: 12px;
    justify-content: center;
+   margin-top: 30px;
 }
 
 .nav-links li a {
@@ -100,7 +82,6 @@ h6 {
 
 .nav-links span {
    padding: 5px 10px;
-   border-radius: 50px;
 }
 
 /* About Suraj */
@@ -112,6 +93,19 @@ h6 {
 .about-image img {
    margin-top: 35px;
    margin-left: 0px;
+}
+
+.content {
+   top: 52%;
+   left: 50%;
+   height: 100px;
+   font-size: 20px;
+   width: 100%;
+   text-align: center;
+}
+
+.content__container__list {
+   text-align: center;
 }
 
 /* Work Experience */
