--- a/mobile.css
+++ b/mobile.css
@@ -118,6 +118,7 @@ header {
    height: 105px;
    margin-left: auto;
    margin-right: auto;
+   margin-top: 30px
 }
 
 .content__container:before {
