--- a/style.css
+++ b/style.css
@@ -564,7 +564,7 @@ header {
 }
 
 .about-image img {
-   margin-top: 75px;
+   margin-top: 50px;
    border-radius: 50%;
    margin-left: 20px;
    border: 3px solid var(--background-color);
@@ -573,11 +573,59 @@ header {
 
 /* Work Experience */
 
-.swiper-container {
+.swiper {
    width: 1000px;
    height: 125px;
-   margin-left: auto;
-   margin-right: auto;
+}
+
+.swiper-slide {
+   font-size: 12px !important;
+   background-color: var(--surface-color);
+   color: #ffffff;
+   display: grid;
+   max-height: 100px;
+   grid-template-columns: 3fr 1fr;
+   align-items: center;
+   border: 3px solid var(--surface-color);
+}
+
+.swiper-slide:hover {
+   background-color: #242424;
+   border: 3px solid var(--primary-variant);
+   transition: 0.3s ease-in-out !important;
+}
+
+.experience-title {
+   padding-left: 10px;
+   opacity: 0.87;
+}
+
+.swiper-slide h5 {
+   font-size: 20px;
+   padding-bottom: 10px;
+   font-weight: 700;
+}
+
+.swiper-slide h6 {
+   font-size: 14px;
+   color: var(--primary-color);
+}
+ 
+.shadow:hover {
+   box-shadow: 0px 0px 10px rgba(29,29,29,0.7);
+   transition: box-shadow 0.3s ease-in-out;
+}
+
+/* .swiper-slide img {
+   display: block;
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
+} */
+
+/* .swiper-container {
+   width: 1000px;
+   height: 125px;
 }
 
 .swiper-slide {
@@ -621,6 +669,7 @@ header {
 .swiper-buttons {
    opacity: 0.38;
    padding-top: 20px;
+   z-index: 99999 !important;
 }
 
 .swiper-button-next {
@@ -653,7 +702,7 @@ header {
 
 .swiper-button-prev:focus {
    outline: none;
-}
+} */
 
 /* CTA */
 
