--- a/style.css
+++ b/style.css
@@ -338,7 +338,8 @@ nav {
 header {
    height: 100vh;
    width: 100%;
-   background: url("./assets/images/header-background.png") no-repeat center center/cover;
+   background-color: var(--background-color);
+   /* background: url("./assets/images/header-background.png") no-repeat center center/cover; */
 }
 
 .welcome-text {
